# browsercrack-rs

./: Cargo.toml  LICENSE-APACHE  README.MD
src/: error.rs  lib.rs  traits.rs
src/browser/: chromium.rs  finder.rs  mod.rs
src/os/: mod.rs
src/os/windows/: api.rs  fs.rs  mod.rs
