[package]
name = "browsercrack-rs"
version = "0.1.0"
edition = "2021"
authors = ["Infamous <ehuff007@gmail.com>"]
description = "A small library to crack browser passwords"
readme = "README.MD"
repository = "https://github.com/ehuff700/browsercrack-rs"
license = "MIT OR Apache-2.0"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Environment"] }

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]